Updated Museum and Painting Services for mapper issues