@@ -1,15 +1,29 @@
 package com.questify.api.services.implementation;
 
-import com.questify.api.dto.response.*;
-import com.questify.api.model.*;
+import com.questify.api.dto.response.HintDTO;
+import com.questify.api.dto.response.MuseumDTO;
+import com.questify.api.dto.response.PaintingBasicDTO;
+import com.questify.api.dto.response.PaintingDetailDTO;
+import com.questify.api.dto.response.RouteDTO;
+import com.questify.api.dto.response.RouteStopDTO;
+import com.questify.api.model.Hint;
+import com.questify.api.model.Museum;
+import com.questify.api.model.Painting;
+import com.questify.api.model.Route;
+import com.questify.api.model.RouteStop;
 import com.questify.api.model.enums.HintType;
-import com.questify.api.repository.*;
+import com.questify.api.repository.MuseumRepository;
+import com.questify.api.repository.PaintingRepository;
+import com.questify.api.repository.RouteRepository;
+import com.questify.api.repository.RouteStopRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -22,29 +36,70 @@ public class MuseumService {
     private final RouteRepository routeRepository;
     private final PaintingRepository paintingRepository;
 
+    private final RouteStopRepository routeStopRepository;
+
     /**
      * Get all active museums with their routes
-     * Optimized: Single query per museum with routes
      */
     public List<MuseumDTO> getAllActiveMuseums() {
-        return museumRepository.findByIsActiveTrue().stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+        List<Museum> museums = museumRepository.findActiveWithRoutes();
+
+        List<Long> routeIds = museums.stream()
+                .flatMap(m -> (m.getRoutes() == null ? List.<Route>of() : m.getRoutes()).stream())
+                .map(Route::getRouteId)
+                .distinct()
+                .toList();
+
+        Map<Long, List<RouteStopDTO>> stopsByRouteId = routeIds.isEmpty()
+                ? Map.of()
+                : routeStopRepository.findAllByRouteIdsWithRouteAndPainting(routeIds).stream()
+                .collect(Collectors.groupingBy(
+                        rs -> rs.getRoute().getRouteId(),
+                        Collectors.collectingAndThen(
+                                Collectors.toList(),
+                                list -> list.stream()
+                                        .sorted(Comparator.comparing(RouteStop::getSequenceNumber))
+                                        .map(this::mapRouteStopToDTO)
+                                        .toList()
+                        )
+                ));
+
+        return museums.stream()
+                .map(m -> mapToDTODetail(m, stopsByRouteId))
+                .toList();
     }
 
     /**
-     * Get single museum by ID with all routes and stops
+     * Get single museum by ID with routes + stops (+ painting basic)
      */
     public MuseumDTO getMuseumById(Long museumId) {
-        Museum museum = museumRepository.findById(museumId)
+        Museum museum = museumRepository.findByIdWithRoutes(museumId)
                 .orElseThrow(() -> new RuntimeException("Museum not found"));
 
-        return mapToDTO(museum);
+        List<Long> routeIds = (museum.getRoutes() == null ? List.<Route>of() : museum.getRoutes()).stream()
+                .map(Route::getRouteId)
+                .distinct()
+                .toList();
+
+        Map<Long, List<RouteStopDTO>> stopsByRouteId = routeIds.isEmpty()
+                ? Map.of()
+                : routeStopRepository.findAllByRouteIdsWithRouteAndPainting(routeIds).stream()
+                .collect(Collectors.groupingBy(
+                        rs -> rs.getRoute().getRouteId(),
+                        Collectors.collectingAndThen(
+                                Collectors.toList(),
+                                list -> list.stream()
+                                        .sorted(Comparator.comparing(RouteStop::getSequenceNumber))
+                                        .map(this::mapRouteStopToDTO)
+                                        .toList()
+                        )
+                ));
+
+        return mapToDTODetail(museum, stopsByRouteId);
     }
 
     /**
      * Get route details with all stops and paintings
-     * This is the main endpoint for starting a route
      */
     public RouteDTO getRouteDetails(Long routeId) {
         Route route = routeRepository.findByIdWithStops(routeId)
@@ -55,7 +110,6 @@ public class MuseumService {
 
     /**
      * Get painting details with hints
-     * Called when user successfully scans a painting
      */
     public PaintingDetailDTO getPaintingDetails(Long paintingId) {
         Painting painting = paintingRepository.findByIdWithHints(paintingId)
@@ -66,38 +120,87 @@ public class MuseumService {
 
     // =============== MAPPERS ===============
 
-    private MuseumDTO mapToDTO(Museum museum) {
+    /**
+     * Overview mapper (used for listing museums)
+     * routes are basic: stops empty (not null)
+     */
+    private MuseumDTO mapToDTOOverview(Museum museum) {
+        List<RouteDTO> routes =
+                (museum.getRoutes() == null ? List.<Route>of() : museum.getRoutes()).stream()
+                        .filter(Route::isActive)
+                        .map(this::mapRouteToBasicDTO)
+                        .collect(Collectors.toList());
+
         return MuseumDTO.builder()
                 .museumId(museum.getMuseumId())
                 .name(museum.getName())
                 .address(museum.getAddress())
                 .description(museum.getDescription())
                 .isActive(museum.isActive())
-                .routes(museum.getRoutes().stream()
-                        .filter(Route::isActive)
-                        .map(this::mapRouteToBasicDTO)
-                        .collect(Collectors.toList()))
+                .routes(routes)
                 .build();
     }
 
+    /**
+     * Detail mapper (used for getMuseumById)
+     * routes include stops (+ painting basic) via stopsByRouteId
+     */
+    private MuseumDTO mapToDTODetail(Museum museum, Map<Long, List<RouteStopDTO>> stopsByRouteId) {
+        List<RouteDTO> routes =
+                (museum.getRoutes() == null ? List.<Route>of() : museum.getRoutes()).stream()
+                        .map(route -> {
+                            List<RouteStopDTO> stops = stopsByRouteId.getOrDefault(route.getRouteId(), List.of());
+
+                            return RouteDTO.builder()
+                                    .routeId(route.getRouteId())
+                                    .museumId(museum.getMuseumId())
+                                    .name(route.getName())
+                                    .description(route.getDescription())
+                                    .isActive(route.isActive())
+                                    .totalStops(stops.size())
+                                    .stops(stops)
+                                    .build();
+                        })
+                        .collect(Collectors.toList());
+
+        return MuseumDTO.builder()
+                .museumId(museum.getMuseumId())
+                .name(museum.getName())
+                .address(museum.getAddress())
+                .description(museum.getDescription())
+                .isActive(museum.isActive())
+                .routes(routes)
+                .build();
+    }
+
+    /**
+     * Basic route DTO (no stops, but never null)
+     */
     private RouteDTO mapRouteToBasicDTO(Route route) {
         return RouteDTO.builder()
                 .routeId(route.getRouteId())
+                .museumId(route.getMuseum() != null ? route.getMuseum().getMuseumId() : null)
                 .name(route.getName())
                 .description(route.getDescription())
                 .isActive(route.isActive())
-                .totalStops(route.getStops().size())
+                .totalStops(route.getStops() == null ? 0 : route.getStops().size())
+                .stops(List.of())
                 .build();
     }
 
+    /**
+     * Route details endpoint mapper (also includes stops)
+     */
     private RouteDTO mapRouteToDetailDTO(Route route) {
-        List<RouteStopDTO> stops = route.getStops().stream()
-                .sorted((a, b) -> a.getSequenceNumber().compareTo(b.getSequenceNumber()))
-                .map(this::mapRouteStopToDTO)
-                .collect(Collectors.toList());
+        List<RouteStopDTO> stops =
+                (route.getStops() == null ? List.<RouteStop>of() : route.getStops()).stream()
+                        .sorted(Comparator.comparing(RouteStop::getSequenceNumber))
+                        .map(this::mapRouteStopToDTO)
+                        .collect(Collectors.toList());
 
         return RouteDTO.builder()
                 .routeId(route.getRouteId())
+                .museumId(route.getMuseum() != null ? route.getMuseum().getMuseumId() : null)
                 .name(route.getName())
                 .description(route.getDescription())
                 .isActive(route.isActive())
@@ -109,8 +212,10 @@ public class MuseumService {
     private RouteStopDTO mapRouteStopToDTO(RouteStop stop) {
         return RouteStopDTO.builder()
                 .routeStopId(stop.getRouteStopId())
+                .routeId(stop.getRoute() != null ? stop.getRoute().getRouteId() : null)
                 .sequenceNumber(stop.getSequenceNumber())
-                .painting(mapToPaintingBasicDTO(stop.getPainting()))
+                .paintingId(stop.getPainting() != null ? stop.getPainting().getPaintingId() : null)
+                .painting(stop.getPainting() == null ? null : mapToPaintingBasicDTO(stop.getPainting()))
                 .build();
     }
 
@@ -126,22 +231,26 @@ public class MuseumService {
 
     private PaintingDetailDTO mapToPaintingDetailDTO(Painting painting) {
 
-        List<Hint> standardHints = painting.getHints().stream()
+        List<Hint> hints = painting.getHints() == null ? List.of() : painting.getHints();
+
+        List<Hint> standardHints = hints.stream()
                 .filter(h -> h.getHintType() == HintType.STANDARD)
-                .sorted((a, b) -> a.getDisplayOrder().compareTo(b.getDisplayOrder()))
+                .sorted(Comparator.comparing(Hint::getDisplayOrder))
                 .toList();
 
-        List<Hint> extraHints = painting.getHints().stream()
+        List<Hint> extraHints = hints.stream()
                 .filter(h -> h.getHintType() == HintType.EXTRA)
-                .sorted((a, b) -> a.getDisplayOrder().compareTo(b.getDisplayOrder()))
+                .sorted(Comparator.comparing(Hint::getDisplayOrder))
                 .toList();
 
         return PaintingDetailDTO.builder()
                 .paintingId(painting.getPaintingId())
+                .museumId(painting.getMuseum() != null ? painting.getMuseum().getMuseumId() : null)
                 .title(painting.getTitle())
                 .artist(painting.getArtist())
                 .year(painting.getYear())
                 .museumLabel(painting.getMuseumLabel())
+                .imageRecognitionKey(painting.getImageRecognitionKey())
                 .infoTitle(painting.getInfoTitle())
                 .infoText(painting.getInfoText())
                 .externalLink(painting.getExternalLink())
